--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   get_it: ^8.2.0
   intl: ^0.20.2
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_test:
