--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   get_it: ^8.2.0
   intl: ^0.20.2
   provider: ^6.1.5+1
+  share_plus: ^12.0.1
 
 dev_dependencies:
   flutter_test:
